--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="js/primitives/segment.js"></script>
   <script>
     function addRandomPoint() {
-      graph.addPoint(
+      const success = graph.tryAddPoint(
         new Point(
           Math.random() * myCanvas.width,
           Math.random() * myCanvas.height
@@ -26,6 +26,7 @@
       );
       ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
       graph.draw(ctx);
+      console.log(success);
     }
 
     myCanvas.width = 600;
