--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
   <canvas id="myCanvas"></canvas>
   <div id="controls">
     <button onclick="addRandomPoint()">Add Point</button>
+    <button onclick="addRandomSegment()">Add Segment</button>
   </div>
 
   <script src="js/math/graph.js"></script>
   <script src="js/primitives/point.js"></script>
   <script src="js/primitives/segment.js"></script>
   <script>
+    function addRandomSegment() {
+      const index1 = Math.floor(Math.random() * graph.points.length);
+      const index2 = Math.floor(Math.random() * graph.points.length);
+
+      let success = false;
+      if (index1 != index2) {
+        success = true;
+        graph.addSegment(
+          new Segment(graph.points[index1], graph.points[index2])
+        );
+      }
+      ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+      graph.draw(ctx);
+      console.log(success);
+    }
+
     function addRandomPoint() {
       const success = graph.tryAddPoint(
         new Point(
