--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
       let success = false;
       if (index1 != index2) {
-        success = true;
-        graph.addSegment(
+        success = graph.tryAddSegment(
           new Segment(graph.points[index1], graph.points[index2])
         );
       }
