--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <canvas id="myCanvas"></canvas>
   <div id="controls"></div>
 
+  <script src="js/graphEditor.js"></script>
   <script src="js/math/graph.js"></script>
   <script src="js/primitives/point.js"></script>
   <script src="js/primitives/segment.js"></script>
@@ -31,6 +32,15 @@
     const s4 = new Segment(p2, p3);
 
     const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
+    const graphEditor = new GraphEditor(myCanvas, graph);
+
+    animate();
+
+    function animate() {
+      ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+      graphEditor.display();
+      requestAnimationFrame(animate);
+    }
     graph.draw(ctx);
   </script>
 </body>
