--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/math/graph.js"></script>
   <script src="js/primitives/point.js"></script>
   <script src="js/primitives/segment.js"></script>
+  <script src="js/primitives/polygon.js"></script>
   <script>
     myCanvas.width = 600;
     myCanvas.height = 600;
@@ -37,6 +38,7 @@
     function animate() {
       viewport.reset();
       graphEditor.display();
+      new Polygon(graph.points).draw(ctx);
       requestAnimationFrame(animate);
     }
     // graph.draw(ctx);
