Remove graphEditor.js and add stopEditor.js

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </div>
 
   <script src="js/world.js"></script>
-  <script src="js/graphEditor.js"></script>
   <script src="js/viewport.js"></script>
+  <script src="js/editors/graphEditor.js"></script>
+  <script src="js/editors/stopEditor.js"></script>
   <script src="js/items/tree.js"></script>
   <script src="js/items/building.js"></script>
   <script src="js/math/utils.js"></script>
@@ -45,6 +46,7 @@
 
     const viewport = new Viewport(myCanvas);
     const graphEditor = new GraphEditor(viewport, graph);
+    const stopEditor = new StopEditor(viewport, world);
 
     let oldGraphHash = graph.hash();
 
@@ -62,6 +64,7 @@
       world.draw(ctx, viewPoint);
       ctx.globalAlpha = 0.3;
       graphEditor.display();
+      stopEditor.display();
       requestAnimationFrame(animate);
     }
 
@@ -84,6 +87,7 @@
         case "stop":
           stopBtn.style.backgroundColor = "#2a5";
           stopBtn.style.filter = "";
+          stopEditor.enable();
           break;
       }
     }
@@ -94,6 +98,7 @@
       graphEditor.disable();
       stopBtn.style.backgroundColor = "gray";
       stopBtn.style.filter = "grayscale(100%)";
+      stopEditor.disable();
     }
   </script>
 </body>
