--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
     &nbsp;
     <button id="graphBtn" onclick="setMode('graph')">🌐</button>
     <button id="stopBtn" onclick="setMode('stop')">🛑</button>
+    <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
   </div>
 
   <script src="js/world.js"></script>
   <script src="js/viewport.js"></script>
   <script src="js/markings/stop.js"></script>
+  <script src="js/markings/crossing.js"></script>
   <script src="js/editors/graphEditor.js"></script>
+  <script src="js/editors/crossingEditor.js"></script>
   <script src="js/editors/stopEditor.js"></script>
   <script src="js/items/tree.js"></script>
   <script src="js/items/building.js"></script>
@@ -48,6 +51,7 @@
     const viewport = new Viewport(myCanvas);
     const graphEditor = new GraphEditor(viewport, graph);
     const stopEditor = new StopEditor(viewport, world);
+    const crossingEditor = new CrossingEditor(viewport, world);
 
     let oldGraphHash = graph.hash();
 
@@ -66,6 +70,7 @@
       ctx.globalAlpha = 0.3;
       graphEditor.display();
       stopEditor.display();
+      crossingEditor.display();
       requestAnimationFrame(animate);
     }
 
@@ -91,6 +96,11 @@
           stopBtn.style.filter = "";
           stopEditor.enable();
           break;
+        case "crossing":
+          crossingBtn.style.backgroundColor = "#2a5";
+          crossingBtn.style.filter = "";
+          crossingEditor.enable();
+          break;
       }
     }
 
@@ -101,6 +111,9 @@
       stopBtn.style.backgroundColor = "gray";
       stopBtn.style.filter = "grayscale(100%)";
       stopEditor.disable();
+      crossingBtn.style.backgroundColor = "gray";
+      crossingBtn.style.filter = "grayscale(100%)";
+      crossingEditor.disable();
     }
   </script>
 </body>
