--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/viewport.js"></script>
   <script src="js/markings/stop.js"></script>
   <script src="js/markings/crossing.js"></script>
+  <script src="js/editors/markingEditor.js"></script>
   <script src="js/editors/graphEditor.js"></script>
   <script src="js/editors/crossingEditor.js"></script>
   <script src="js/editors/stopEditor.js"></script>
