--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     const graphEditor = new GraphEditor(viewport, graph);
     const stopEditor = new StopEditor(viewport, world);
     const crossingEditor = new CrossingEditor(viewport, world);
+    const tools = {
+      graph: { button: graphBtn, editor: graphEditor },
+      stop: { button: stopBtn, editor: stopEditor },
+      crossing: { button: crossingBtn, editor: crossingEditor }
+    }
 
     let oldGraphHash = graph.hash();
 
@@ -70,9 +75,9 @@
       const viewPoint = scale(viewport.getOffset(), -1)
       world.draw(ctx, viewPoint);
       ctx.globalAlpha = 0.3;
-      graphEditor.display();
-      stopEditor.display();
-      crossingEditor.display();
+      for (const tool of Object.values(tools)) {
+        tool.editor.display();
+      }
       requestAnimationFrame(animate);
     }
 
@@ -87,35 +92,17 @@
 
     function setMode(mode) {
       dissableEditors();
-      switch (mode) {
-        case "graph":
-          graphBtn.style.backgroundColor = "#2a5";
-          graphBtn.style.filter = "";
-          graphEditor.enable();
-          break;
-        case "stop":
-          stopBtn.style.backgroundColor = "#2a5";
-          stopBtn.style.filter = "";
-          stopEditor.enable();
-          break;
-        case "crossing":
-          crossingBtn.style.backgroundColor = "#2a5";
-          crossingBtn.style.filter = "";
-          crossingEditor.enable();
-          break;
-      }
+      tools[mode].button.style.backgroundColor = "#2a5";
+      tools[mode].button.style.filter = "";
+      tools[mode].editor.enable();
     }
 
     function dissableEditors() {
-      graphBtn.style.backgroundColor = "gray";
-      graphBtn.style.filter = "grayscale(100%)";
-      graphEditor.disable();
-      stopBtn.style.backgroundColor = "gray";
-      stopBtn.style.filter = "grayscale(100%)";
-      stopEditor.disable();
-      crossingBtn.style.backgroundColor = "gray";
-      crossingBtn.style.filter = "grayscale(100%)";
-      crossingEditor.disable();
+      for (const tool of Object.values(tools)) {
+        tool.button.style.backgroundColor = "gray";
+        tool.button.style.filter = "grayscale(100%)";
+        tool.editor.disable();
+      }
     }
   </script>
 </body>
