--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 
     const graph = world.graph;
 
-    const viewport = new Viewport(myCanvas);
+    const viewport = new Viewport(myCanvas, world.zoom, world.offset);
+
     const tools = {
       graph: { button: graphBtn, editor: new GraphEditor(viewport, graph) },
       stop: { button: stopBtn, editor: new StopEditor(viewport, world) },
@@ -107,6 +108,9 @@
     }
 
     function save() {
+      world.zoom = viewport.zoom;
+      world.offset = viewport.offset;
+
       const element = document.createElement('a');
       element.setAttribute(
         'href',
