idk it is not working but still I am uploading it. Refactoring it later.

--- a/world/index.html
+++ b/world/index.html
@@ -61,6 +61,7 @@
   <script src="js/items/building.js"></script>
   <script src="js/math/utils.js"></script>
   <script src="js/math/graph.js"></script>
+  <script src="js/math/osm.js"></script>
   <script src="js/primitives/point.js"></script>
   <script src="js/primitives/segment.js"></script>
   <script src="js/primitives/polygon.js"></script>
@@ -175,6 +176,17 @@
 
     function closeOsmPanel() {
       osmPanel.style.display = "none";
+    }
+
+    function parseOsmData() {
+      if (osmDataContainer.value == "") {
+        alert("Paste OSM data in the container.");
+        return;
+      }
+      const res = Osm.parseRoads(JSON.parse(osmDataContainer.value));
+      graph.points = res.points;
+      graph.segments = res.segments;
+      closeOsmPanel();
     }
   </script>
 </body>
