--- a/world/index.html
+++ b/world/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body oncontextmenu="return false;">
   <h1>World Editor</h1>
   <canvas id="myCanvas"></canvas>
   <div id="controls">
@@ -16,7 +16,7 @@
     <button onclick="save()">💾</button>
     <label for="fileInput" class="file-input-label">
       📁
-      <input type="file" id="fileInput" accept=".world" onchange="load(event)">
+      <input type="file" id="fileInput" accept=".world" onchange="load(event)" />
     </label>
     <button onclick="openOsmPanel()">🗺️</button>
     &nbsp;
@@ -29,8 +29,8 @@
     <button id="startBtn" onclick="setMode('start')">🚙</button>
     <button id="targetBtn" onclick="setMode('target')">🎯</button>
 
-    <div id="osmPanel" style="display: none;">
-      <textarea placeholder="Paste OSM data here" id="osmDataContainer" cols="50" rows="10"></textarea>
+    <div id="osmPanel" style="display:none;">
+      <textarea id="osmDataContainer" rows="10" cols="50" placeholder="Paste OSM data here"></textarea>
       <div>
         <button onclick="parseOsmData()">✅</button>
         <button onclick="closeOsmPanel()">❌</button>
@@ -70,12 +70,13 @@
     myCanvas.width = 600;
     myCanvas.height = 600;
 
-    const ctx = myCanvas.getContext('2d');
+    const ctx = myCanvas.getContext("2d");
 
     const worldString = localStorage.getItem("world");
     const worldInfo = worldString ? JSON.parse(worldString) : null;
-    let world = worldInfo ? World.load(worldInfo) : new World(new Graph());
-
+    let world = worldInfo
+      ? World.load(worldInfo)
+      : new World(new Graph());
     const graph = world.graph;
 
     const viewport = new Viewport(myCanvas, world.zoom, world.offset);
@@ -88,8 +89,8 @@
       parking: { button: parkingBtn, editor: new ParkingEditor(viewport, world) },
       light: { button: lightBtn, editor: new LightEditor(viewport, world) },
       target: { button: targetBtn, editor: new TargetEditor(viewport, world) },
-      yield: { button: yieldBtn, editor: new YieldEditor(viewport, world) }
-    }
+      yield: { button: yieldBtn, editor: new YieldEditor(viewport, world) },
+    };
 
     let oldGraphHash = graph.hash();
 
@@ -103,7 +104,7 @@
         world.generate();
         oldGraphHash = graph.hash();
       }
-      const viewPoint = scale(viewport.getOffset(), -1)
+      const viewPoint = scale(viewport.getOffset(), -1);
       world.draw(ctx, viewPoint);
       ctx.globalAlpha = 0.3;
       for (const tool of Object.values(tools)) {
@@ -121,14 +122,15 @@
       world.zoom = viewport.zoom;
       world.offset = viewport.offset;
 
-      const element = document.createElement('a');
+      const element = document.createElement("a");
       element.setAttribute(
-        'href',
-        'data:application/json;charset=utf-8,' + encodeURIComponent(JSON.stringify(world))
+        "href",
+        "data:application/json;charset=utf-8," +
+        encodeURIComponent(JSON.stringify(world))
       );
 
       const fileName = "name.world";
-      element.setAttribute('download', fileName);
+      element.setAttribute("download", fileName);
 
       element.click();
 
