--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <button onclick="save()">💾</button>
     <button onclick="discard()">🗑️</button>
   </div>
-  <canvas id="networkCanvas"></canvas>
+  <div>
+    <canvas id="networkCanvas"></canvas>
+    <canvas id="miniMapCanvas"></canvas>
+  </div>
+
   <script src="world/js/world.js"></script>
   <script src="world/js/viewport.js"></script>
   <script src="world/js/markings/marking.js"></script>
@@ -40,6 +44,9 @@
   <script src="world/js/primitives/polygon.js"></script>
   <script src="world/js/primitives/envelope.js"></script>
 
+  <script src="world/saves/myWorld but still I can't find it F.world"></script>
+
+  <script src="miniMap.js"></script>
   <script src="visualizer.js"></script>
   <script src="network.js"></script>
   <script src="sensor.js"></script>
