--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button onclick="save()">💾</button>
   </div>
 
+  <script src="js/world.js"></script>
   <script src="js/viewport.js"></script>
   <script src="js/graphEditor.js"></script>
   <script src="js/math/utils.js"></script>
@@ -31,6 +32,8 @@
     const graphString = localStorage.getItem('graph');
     const graphInfo = graphString ? JSON.parse(graphString) : null;
     const graph = graphInfo ? Graph.load(graphInfo) : new Graph();
+    const world = new World(graph);
+
     const viewport = new Viewport(myCanvas)
     const graphEditor = new GraphEditor(viewport, graph);
 
@@ -38,8 +41,10 @@
 
     function animate() {
       viewport.reset();
+      world.generate();
+      world.draw(ctx);
+      ctx.globalAlpha = 0.3;
       graphEditor.display();
-      new Envelope(graph.segments[0], 200, 20).draw(ctx);
       requestAnimationFrame(animate);
     }
 
