Add buttons for graph and stop modes in index.html and update button styles in style.css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <div id="controls">
     <button onclick="dispose()">🗑️</button>
     <button onclick="save()">💾</button>
+    &nbsp; &nbsp;
+    <button id="graphBtn" onclick="setMode('graph')">🌐</button>
+    <button id="stopBtn" onclick="setMode('stop')">🛑</button>
   </div>
 
   <script src="js/world.js"></script>
