--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     const graphEditor = new GraphEditor(viewport, graph);
 
     let oldGraphHash = graph.hash();
+
+    setMode('graph');
+
     animate();
 
     function animate() {
@@ -64,6 +67,29 @@
 
     function save() {
       localStorage.setItem('graph', JSON.stringify(graph));
+    }
+
+    function setMode(mode) {
+      disableEditors();
+      switch (mode) {
+        case 'graph':
+          graphBtn.style.backgroundColor = '';
+          graphBtn.style.filter = '';
+          graphEditor.enable();
+          break;
+        case 'stop':
+          stopBtn.style.backgroundColor = '';
+          stopBtn.style.filter = '';
+          break;
+      }
+    }
+
+    function disableEditors() {
+      graphBtn.style.backgroundColor = 'gray';
+      graphBtn.style.filter = "grayscale(100%)";
+      graphEditor.disable();
+      stopBtn.style.backgroundColor = 'gray';
+      stopBtn.style.filter = "grayscale(100%)";
     }
   </script>
 </body>
