--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
   <script src="js/world.js"></script>
   <script src="js/viewport.js"></script>
+  <script src="js/markings/stop.js"></script>
+  <script src="js/editors/graphEditor.js"></script>
+  <script src="js/editors/stopEditor.js"></script>
   <script src="js/items/tree.js"></script>
   <script src="js/items/building.js"></script>
-  <script src="js/graphEditor.js"></script>
   <script src="js/math/utils.js"></script>
   <script src="js/math/graph.js"></script>
   <script src="js/primitives/point.js"></script>
@@ -41,6 +43,7 @@
 
     const viewport = new Viewport(myCanvas)
     const graphEditor = new GraphEditor(viewport, graph);
+    const stopEditor = new StopEditor(viewport, world);
 
     let oldGraphHash = graph.hash();
 
@@ -58,6 +61,7 @@
       world.draw(ctx, viewPoint);
       ctx.globalAlpha = 0.3;
       graphEditor.display();
+      stopEditor.display();
       requestAnimationFrame(animate);
     }
 
@@ -80,6 +84,7 @@
         case 'stop':
           stopBtn.style.backgroundColor = '';
           stopBtn.style.filter = '';
+          stopEditor.enable();
           break;
       }
     }
@@ -90,6 +95,7 @@
       graphEditor.disable();
       stopBtn.style.backgroundColor = 'gray';
       stopBtn.style.filter = "grayscale(100%)";
+      stopEditor.disable();
     }
   </script>
 </body>
