--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     &nbsp; &nbsp;
     <button id="graphBtn" onclick="setMode('graph')">🌐</button>
     <button id="stopBtn" onclick="setMode('stop')">🛑</button>
+    <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
   </div>
 
   <script src="js/world.js"></script>
   <script src="js/viewport.js"></script>
   <script src="js/markings/stop.js"></script>
+  <script src="js/markings/crossing.js"></script>
   <script src="js/editors/graphEditor.js"></script>
   <script src="js/editors/stopEditor.js"></script>
+  <script src="js/editors/crossingEditor.js"></script>
   <script src="js/items/tree.js"></script>
   <script src="js/items/building.js"></script>
   <script src="js/math/utils.js"></script>
@@ -44,6 +47,7 @@
     const viewport = new Viewport(myCanvas)
     const graphEditor = new GraphEditor(viewport, graph);
     const stopEditor = new StopEditor(viewport, world);
+    const crossingEditor = new CrossingEditor(viewport, world);
 
     let oldGraphHash = graph.hash();
 
@@ -62,6 +66,7 @@
       ctx.globalAlpha = 0.3;
       graphEditor.display();
       stopEditor.display();
+      crossingEditor.display();
       requestAnimationFrame(animate);
     }
 
@@ -87,6 +92,11 @@
           stopBtn.style.filter = '';
           stopEditor.enable();
           break;
+        case 'crossing':
+          crossingBtn.style.backgroundColor = '';
+          crossingBtn.style.filter = '';
+          crossingEditor.enable();
+          break;
       }
     }
 
@@ -97,6 +107,9 @@
       stopBtn.style.backgroundColor = 'gray';
       stopBtn.style.filter = "grayscale(100%)";
       stopEditor.disable();
+      crossingBtn.style.backgroundColor = 'gray';
+      crossingBtn.style.filter = "grayscale(100%)";
+      crossingEditor.disable();
     }
   </script>
 </body>
