Refactoring by extending the marking and the markingEditor classes to one for each. :)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
   <script src="js/world.js"></script>
   <script src="js/viewport.js"></script>
+  <script src="js/markings/marking.js"></script>
   <script src="js/markings/stop.js"></script>
   <script src="js/markings/crossing.js"></script>
+  <script src="js/editors/markingEditor.js"></script>
   <script src="js/editors/graphEditor.js"></script>
   <script src="js/editors/stopEditor.js"></script>
   <script src="js/editors/crossingEditor.js"></script>
