--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
     const world = new World(graph);
 
     const viewport = new Viewport(myCanvas)
-    const graphEditor = new GraphEditor(viewport, graph);
-    const stopEditor = new StopEditor(viewport, world);
-    const crossingEditor = new CrossingEditor(viewport, world);
+    const tools = {
+      graph: { button: graphBtn, editor: new GraphEditor(viewport, graph) },
+      stop: { button: stopBtn, editor: new StopEditor(viewport, world) },
+      crossing: { button: crossingBtn, editor: new CrossingEditor(viewport, world) }
+    }
 
     let oldGraphHash = graph.hash();
 
@@ -66,14 +68,14 @@
       const viewPoint = scale(viewport.getOffset(), -1)
       world.draw(ctx, viewPoint);
       ctx.globalAlpha = 0.3;
-      graphEditor.display();
-      stopEditor.display();
-      crossingEditor.display();
+      for (const tool of Object.values(tools)) {
+        tool.editor.display();
+      }
       requestAnimationFrame(animate);
     }
 
     function dispose() {
-      graphEditor.dispose();
+      tools["graph"].editor.dispose();
       world.markings.length = 0;
     }
 
@@ -83,35 +85,17 @@
 
     function setMode(mode) {
       disableEditors();
-      switch (mode) {
-        case 'graph':
-          graphBtn.style.backgroundColor = '';
-          graphBtn.style.filter = '';
-          graphEditor.enable();
-          break;
-        case 'stop':
-          stopBtn.style.backgroundColor = '';
-          stopBtn.style.filter = '';
-          stopEditor.enable();
-          break;
-        case 'crossing':
-          crossingBtn.style.backgroundColor = '';
-          crossingBtn.style.filter = '';
-          crossingEditor.enable();
-          break;
-      }
+      tools[mode].button.style.backgroundColor = '';
+      tools[mode].button.style.filter = '';
+      tools[mode].editor.enable();
     }
 
     function disableEditors() {
-      graphBtn.style.backgroundColor = 'gray';
-      graphBtn.style.filter = "grayscale(100%)";
-      graphEditor.disable();
-      stopBtn.style.backgroundColor = 'gray';
-      stopBtn.style.filter = "grayscale(100%)";
-      stopEditor.disable();
-      crossingBtn.style.backgroundColor = 'gray';
-      crossingBtn.style.filter = "grayscale(100%)";
-      crossingEditor.disable();
+      for (const tool of Object.values(tools)) {
+        tool.button.style.backgroundColor = 'gray';
+        tool.button.style.filter = "grayscale(100%)";
+        tool.editor.disable();
+      }
     }
   </script>
 </body>
