--- a/world/index.html
+++ b/world/index.html
@@ -58,9 +58,9 @@
     myCanvas.width = 600;
     myCanvas.height = 600;
 
-    const ctx = myCanvas.getContext('2d');
+    const ctx = myCanvas.getContext("2d");
 
-    const worldString = localStorage.getItem('world');
+    const worldString = localStorage.getItem("world");
     const worldInfo = worldString ? JSON.parse(worldString) : null;
     let world = worldInfo ? World.load(worldInfo) : new World(new Graph());
     const graph = world.graph;
@@ -80,7 +80,7 @@
 
     let oldGraphHash = graph.hash();
 
-    setMode('graph');
+    setMode("graph");
 
     animate();
 
@@ -90,7 +90,7 @@
         world.generate();
         oldGraphHash = graph.hash();
       }
-      const viewPoint = scale(viewport.getOffset(), -1)
+      const viewPoint = scale(viewport.getOffset(), -1);
       world.draw(ctx, viewPoint);
       ctx.globalAlpha = 0.3;
       for (const tool of Object.values(tools)) {
@@ -108,22 +108,26 @@
       world.zoom = viewport.zoom;
       world.offset = viewport.offset;
 
-      const element = document.createElement('a');
-      element.setAttribute('href', 'data:application/json;charset=utf-8' + encodeURIComponent(JSON.stringify(world)));
+      const element = document.createElement("a");
+      element.setAttribute(
+        "href",
+        "data:application/json;charset=utf-8," +
+        encodeURIComponent(JSON.stringify(world))
+      );
 
       const fileName = "name.world";
-      element.setAttribute('download', fileName);
+      element.setAttribute("download", fileName);
 
       element.click();
 
-      localStorage.setItem('world', JSON.stringify(world));
+      localStorage.setItem("world", JSON.stringify(world));
     }
 
     function load(event) {
       const file = event.target.files[0];
 
       if (!file) {
-        alert('No file selected');
+        alert("No file selected!");
         return;
       }
 
@@ -133,21 +137,22 @@
       reader.onload = (evt) => {
         const fileContent = evt.target.result;
         const jsonData = JSON.parse(fileContent);
-        world = World.load(jsonData); localStorage.setItem('world', JSON.stringify(world));
+        world = World.load(jsonData);
+        localStorage.setItem("world", JSON.stringify(world));
         location.reload();
       }
     }
 
     function setMode(mode) {
       disableEditors();
-      tools[mode].button.style.backgroundColor = '';
-      tools[mode].button.style.filter = '';
+      tools[mode].button.style.backgroundColor = "";
+      tools[mode].button.style.filter = "";
       tools[mode].editor.enable();
     }
 
     function disableEditors() {
       for (const tool of Object.values(tools)) {
-        tool.button.style.backgroundColor = 'gray';
+        tool.button.style.backgroundColor = "gray";
         tool.button.style.filter = "grayscale(100%)";
         tool.editor.disable();
       }
