--- a/world/index.html
+++ b/world/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>World Editor</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -19,11 +19,11 @@
     &nbsp; &nbsp; &nbsp;
     <button id="graphBtn" onclick="setMode('graph')">🌐</button>
     <button id="stopBtn" onclick="setMode('stop')">🛑</button>
-    <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
-    <button id="startBtn" onclick="setMode('start')">🚙</button>
     <button id="yieldBtn" onclick="setMode('yield')">⚠️</button>
+    <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
     <button id="parkingBtn" onclick="setMode('parking')">🅿️</button>
     <button id="lightBtn" onclick="setMode('light')">🚦</button>
+    <button id="startBtn" onclick="setMode('start')">🚙</button>
     <button id="targetBtn" onclick="setMode('target')">🎯</button>
   </div>
 
@@ -31,19 +31,19 @@
   <script src="js/viewport.js"></script>
   <script src="js/markings/marking.js"></script>
   <script src="js/markings/stop.js"></script>
-  <script src="js/markings/crossing.js"></script>
   <script src="js/markings/start.js"></script>
-  <script src="js/markings/light.js"></script>
+  <script src="js/markings/crossing.js"></script>
   <script src="js/markings/parking.js"></script>
+  <script src="js/markings/light.js"></script>
   <script src="js/markings/target.js"></script>
   <script src="js/markings/yield.js"></script>
   <script src="js/editors/markingEditor.js"></script>
   <script src="js/editors/graphEditor.js"></script>
-  <script src="js/editors/stopEditor.js"></script>
   <script src="js/editors/crossingEditor.js"></script>
+  <script src="js/editors/stopEditor.js"></script>
   <script src="js/editors/startEditor.js"></script>
-  <script src="js/editors/lightEditor.js"></script>
   <script src="js/editors/parkingEditor.js"></script>
+  <script src="js/editors/lightEditor.js"></script>
   <script src="js/editors/targetEditor.js"></script>
   <script src="js/editors/yieldEditor.js"></script>
   <script src="js/items/tree.js"></script>
@@ -62,7 +62,9 @@
 
     const worldString = localStorage.getItem("world");
     const worldInfo = worldString ? JSON.parse(worldString) : null;
-    let world = worldInfo ? World.load(worldInfo) : new World(new Graph());
+    let world = worldInfo
+      ? World.load(worldInfo)
+      : new World(new Graph());
     const graph = world.graph;
 
     const viewport = new Viewport(myCanvas, world.zoom, world.offset);
